--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "produtos-api",
+  "name": "livros-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -22,11 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "github:nestjs/config",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^9.0.0",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.21.3",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -35,6 +40,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -49,7 +55,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.74.0"
   },
   "jest": {
     "moduleFileExtensions": [
